--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    background: linear-gradient(to right, #360033,#0b8895);
+
+body{
+    background: linear-gradient(to right, #360033, #0b8793);
     font-family: sans-serif;
 }
+
 header h1{
     color: #fff;
     margin: 5rem 0;
     font-size: 3rem;
 }
-header,form {
+
+header,
+form{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,9 +25,11 @@ header,form {
 form{
     position: relative;
 }
+
 form .search{
     display: flex;
 }
+
 form button,
 form input{
     padding: 0.5rem;
@@ -32,31 +38,36 @@ form input{
     background-color: #fff;
     outline: none;
 }
+
 form button{
     color: #fff;
     background-color: #340436;
     cursor: pointer;
-    transition: all 0.5s ease;
-    
+    transition: all 0.3s ease;
 }
+
 form button:hover{
     background-color: #fff;
     color: #340436;
 }
+
 .select{
     position: relative;
     margin: 1rem;
     overflow: hidden;
 }
-select {
+
+select{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     outline: none;
     border: none;
+
     width: 10rem;
     padding: 1rem;
-    color:#340436; ;
+    cursor: pointer;
+    color: #340436;
 }
 
 .select:after{
@@ -71,23 +82,23 @@ select {
     transition: all 0.3s ease;
     pointer-events: none;
 }
+
 .select:hover:after{
     background-color: #fff;
     color: #340436;
-    transition: all 0.5s ease;
 }
+
 .todo-container{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.todo-list {
 
-        min-width: 30%;
-        list-style: none;
-    
-
+.todo-list{
+    min-width: 30%;
+    list-style: none;
 }
+
 .todo{
     margin: 0.5rem;
     background-color: #fff;
@@ -98,10 +109,12 @@ select {
     align-items: center;
     transition: .5s all ease;
 }
+
 .todo li{
     width: 100%;
     padding: 0 0.5rem;
 }
+
 .complete-btn,
 .trash-btn{
     background-color: #960303;
@@ -111,9 +124,12 @@ select {
     cursor: pointer;
     font-size: 1rem;
 }
+
 .complete-btn{
     background-color: #0b8793;
 }
+
+
 .fa-check-circle,
 .fa-minus-circle{
     font-size: 1.5rem;
@@ -145,8 +161,9 @@ select {
     background-color: #5ebe92;
 }
 
+
 .fall{
-    transform: translateY(8rem) rotateZ(360deg);
+    transform: translateY(8rem);
     opacity: 0;
 }
 
